package modelo.enums;

public enum EstadoTransaccion {
    PENDIENTE,
    PROCESANDO,
    COMPLETADA,
    RECHAZADA,
    REVERTIDA
}
