package modelo.interfaces;

public interface Consultable {
    String obtenerResumen();
    boolean estaActivo();
    String obtenerTipo();
}
